# simple_llm

./: .gitignore  README.md  delete_pycache.sh  demo.py  pyproject.toml  requirements-dev.txt  upload.sh
src/simple-llm/: agent.py
src/simple-llm/agents/: gemini.py  openai.py
src/simple_llm/: agent.py  printing.py
src/simple_llm/agents/: delegator.py  gemini.py  groq.py  openai.py  universal.py
src/simple_llm/chat/: groupchat.py
src/simple_llm/clients/: gemini.py  openai.py
src/simple_llm/embeddings/: openai.py
src/simple_llm/tools/: models.py  toolcalls.py
