[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simple_llm"
version = "1.1.0"
authors = [
    {name="Lucas Khan", email="lucaskhan03@gmail.com"}
]
description="Ultra-lightweight LLM agent orchestration for Gemini and OpenAI-like providers"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = ["termcolor>=2.4.0"]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.optional-dependencies]
openai = ["openai"]
gemini = ["google-generativeai"]

[tool.hatch.build]
includes = ["src/**"]

[project.urls]
Homepage = "https://github.com/1-mbps/simple-llm"
Issues = "https://github.com/1-mbps/simple-llm/issues"